--- a/MySecondTestAppSpringBoot/src/main/resources/application.properties
+++ b/MySecondTestAppSpringBoot/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=MySecondTestAppSpringBoot
 server.port=8082
+logging.level.org.springframework=ERROR
+logging.level.ru.drozdov=DEBUG
